<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_regis"
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:src="@drawable/dicoding_regis"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:alpha="0"
            android:text="@string/desc_regis"
            android:textSize="16dp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/iv_regis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:alpha="100"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:alpha="0"
                app:layout_constraintTop_toBottomOf="@id/tv_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/baseline_person"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:hint="@string/hintNama"
                    android:inputType="text"
                    tools:alpha="100"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:alpha="0"
                app:layout_constraintTop_toBottomOf="@id/tv_nama"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/baseline_email"
                app:errorEnabled="true"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:hint="@string/hintEmail"
                    android:inputType="text"
                    tools:alpha="100"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:alpha="0"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/baseline_lock"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/midnight_blue"
                app:errorEnabled="true"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    tools:alpha="100"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:alpha="0"
                android:text="@string/btnDaftar"
                android:textSize="15dp"
                android:textStyle="normal"
                tools:alpha="100" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/tvLogin"
                tools:alpha="100" />

            <TextView
                android:id="@+id/btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:alpha="0"
                android:text="@string/edLogin"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onButtonClick"
                tools:alpha="100"/>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>